# aksum-std

./: .env  .env.example  .gitignore  Cargo.toml  README.md
.sqlx/: query-00300d554d34588e18593dae704d25182b643a077cd541bb3504e5e267252642.json  query-1c984e3aa92b66d227dc32653bd838c038d5efc0bf8fa263bf08927c3101734d.json  query-4496f2390381379ae00dc7009dcd681214d67c7db678722491ebfba012711c85.json  query-663b0766d556fe63d63dcf6abd5b599ab64cc5da3212742fb3f1b86810840862.json  query-a7335bc553e0db666e6bf9242d5e1871a2138cb354f2d51d6cc5db1bb4e3d5ea.json  query-ccebe345c4d7e8fb14fff12e0d9e271bd666c2b218b92713513970e26a9c0e30.json
migrations/: 20240515114030_tickets.up.sql  20240515115234_create_tickets_table.down.sql  20240515120400_create_users_table.up.sql
src/: errors.rs  jwt.rs  main.rs
src/errors/: error.rs
src/models/: mod.rs  user.rs
src/reqrep/: mod.rs  tickets.rs
src/resp/: resp.rs
src/routes/: mod.rs  not_found.rs
src/routes/tickets/: create.rs  delete.rs  get.rs  list.rs  mod.rs  update.rs
src/routes/users/: login.rs  mod.rs  register.rs
